# CLAP-Library

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/level1/: axpy_d.cpp  axpy_f.cpp  copy_d.cpp  copy_f.cpp  dot_d.cpp  dot_f.cpp  scal_d.cpp  scal_f.cpp  swap_d.cpp  swap_f.cpp
examples/level2/: gemv_d.cpp  gemv_f.cpp  ger_f.cpp  sbmv_d.cpp  sbmv_f.cpp  symv_d.cpp  symv_f.cpp  trmv_d.cpp  trmv_f.cpp  trsv_d.cpp  trsv_f.cpp
examples/level3/: gemm_d.cpp  gemm_f.cpp  symm_d.cpp  symm_f.cpp  syrk_d.cpp  syrk_f.cpp  trmm_d.cpp  trmm_f.cpp  trsm_d.cpp  trsm_f.cpp
include/: blas.hh
include/clap/: blas_factory.hpp  cublas_backend.hpp  cublas_utils.hpp  dyn_backends.hpp  macros.hpp  openblas_backend.hpp  openblas_utils.hpp  rocblas_backend.hpp  rocblas_utils.hpp  types.hpp
src/Rocblas/: level1.cpp
src/common/: blas_factory.cpp  dyn_backends.cpp
src/cublas/: cublas_backend.cpp  level1.cpp  level2.cpp  level3.cpp
src/openblas/: level1.cpp  level2.cpp  level3.cpp  openblas_backend.cpp
src/rocblas/: level1.cpp  level2.cpp  level3.cpp  rocblas_backend.cpp
